CM - add website page, bages, info component deleted

--- a/config_module/src/App.css
+++ b/config_module/src/App.css
@@ -27,6 +27,19 @@
 .App-link {
   color: #61dafb;
 }
+a {text-decoration: none !important;}
+
+a:hover, /* OPTIONAL*/
+a:visited,
+a:focus
+{text-decoration: none !important;}
+
+.list-group-item.active {
+  color: #212529 !important;
+  background-color: transparent !important;
+  border-color: #0d6efd !important;
+  border-width: 1px !important;
+}
 
 @keyframes App-logo-spin {
   from {
