--- a/config_module/src/App.css
+++ b/config_module/src/App.css
@@ -2,6 +2,9 @@
   position: relative;
   min-height: 100vh;
 }
+.vh-100-c {
+  height: calc(100vh - 76px) !important;
+}
 a {text-decoration: none !important;}
 
 a:hover, /* OPTIONAL*/
