--- a/config_module/src/App.css
+++ b/config_module/src/App.css
@@ -15,7 +15,8 @@ a:focus {
   text-decoration: none !important;
 }
 
-h2, .h2 {
+h2,
+.h2 {
   font-family: Helvetica, Arial, sans-serif;
   font-size: 18px !important;
   font-weight: 900 !important;
@@ -27,6 +28,12 @@ h2, .h2 {
   border-color: #0d6efd !important;
   border-width: 1px !important;
 }
+
+.scrollable {
+  max-height: calc(100vh - 101px);
+  overflow-y: scroll;
+}
+
 .btn svg {
   margin-bottom: 4px;
 }
