--- a/config_module/src/App.css
+++ b/config_module/src/App.css
@@ -56,3 +56,15 @@ h2,
 .list-group-item {
   border-width: 2px !important;
 }
+
+.navbar {
+  padding-top: 0 !important;
+  padding-bottom: 0 !important;
+}
+
+.list-component .btn-outline-primary {
+  border-width: 2px;
+}
+.list-component .btn-outline-primary svg{
+  margin-bottom: 0;
+}
