--- a/config_module/src/App.css
+++ b/config_module/src/App.css
@@ -4,7 +4,7 @@
 }
 
 .vh-100-c {
-  height: calc(100vh - 76px) !important;
+  height: calc(100vh - 60px) !important;
 }
 
 a {
@@ -30,11 +30,13 @@ h2,
   border-color: #0d6efd !important;
   border-width: 1px !important;
 }
-
-.scrollable {
-  max-height: calc(100vh - 101px);
-  overflow-y: scroll;
+@media screen and (min-width: 1200px){
+  .scrollable {
+    max-height: calc(100vh - 101px);
+    overflow-y: scroll;
+  }
 }
+
 
 .btn svg {
   margin-bottom: 4px;
