--- a/config_module/src/App.css
+++ b/config_module/src/App.css
@@ -1,6 +1,6 @@
 #root {
   position: relative;
-  min-height: 100vh;
+  min-height: 100%;
 }
 
 .vh-100-c {
@@ -24,19 +24,12 @@ h2,
   font-weight: 900 !important;
 }
 
-.list-group-item.active {
-  color: #212529 !important;
-  background-color: transparent !important;
-  border-color: #0d6efd !important;
-  border-width: 1px !important;
-}
 @media screen and (min-width: 1200px){
   .scrollable {
     max-height: calc(100vh - 101px);
     overflow-y: scroll;
   }
 }
-
 
 .btn svg {
   margin-bottom: 4px;
